# bepospliz

./: .gitignore  README.md  requirements-dev.txt  setup.cfg
docs/: README.md
src/bepospliz/: __init__.py  bepospliz.py
tests/: test_bepospliz.py
