[metadata]
name = bepospliz
version = 1.0.1
description = BePosPliz (be positional please) is a lightweight module to anonymize the arguments of a function.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qexat/bepospliz
author = Qexat
author_email = 43090614+qexat@users.noreply.github.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.11

[options.packages.find]
where = src
exclude =
    tests*

[mypy-tests.*]
disallow_untyped_defs = false
